--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,8 +31,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - uses: actions/setup-python@v2
-      if: matrix.os == 'macos'
-      with: { python-version: "3.x" }
+      with: { python-version: "3.8" }
 
     - name: Create project
       run: |
@@ -77,8 +76,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - uses: actions/setup-python@v2
-      if: matrix.os == 'macos'
-      with: { python-version: "3.x" }
+      with: { python-version: "3.8" }
 
     - name: Create project
       run: |
@@ -112,6 +110,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+
+    - uses: actions/setup-python@v2
+      with: { python-version: "3.8" }
 
     - name: Package
       run: python -m zipapp cmake-init -p "/usr/bin/env python3"
