--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,11 @@ on:
   push:
     branches:
     - master
+    - develop
 
   pull_request:
     branches:
-    - master
+    - develop
 
 jobs:
   shared_static:
@@ -102,7 +103,7 @@ jobs:
   release:
     name: Package a release
 
-    if: github.event_name == 'push'
+    if: github.ref == 'refs/heads/master'
 
     needs: [shared_static, other]
 
@@ -119,14 +120,7 @@ jobs:
 
     - name: Get version
       id: version
-      shell: sh
       run: echo "::set-output name=version::$(python cmake-init.pyz --version)"
-
-    - uses: mathieudutour/github-tag-action@v5.4
-      id: tag_version
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        custom_tag: ${{ steps.version.outputs.version }}
 
     - name: Release
       uses: softprops/action-gh-release@v1
@@ -135,6 +129,5 @@ jobs:
       with:
         files: cmake-init.pyz
         prerelease: true
-        tag_name: ${{ steps.tag_version.outputs.new_tag }}
-        body: Release of version ${{ steps.tag_version.outputs.new_tag }}
-        name: ${{ steps.tag_version.outputs.new_tag }}
+        body: Release of version ${{ steps.version.outputs.version }}
+        name: v${{ steps.version.outputs.version }}
