--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -61,6 +61,10 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
+    - name: Install clang-tidy
+      if: matrix.os == 'ubuntu'
+      run: sudo apt-get install clang-tidy -y -q
+
     - name: Configure
       run: cmake --preset=ci-${{ matrix.os }}{type shared}
         -D BUILD_SHARED_LIBS=${{ matrix.shared }}{end}
