--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -50,9 +50,12 @@ jobs:
       matrix:
         os: [macos, ubuntu, windows]{type shared}
 
-        type: [shared, static]
+        type: [shared, static]{end}
 
         include:
+        # CMake by default will pick 10.0.17763.0 up, but that has bugs in it
+        # that make it emit warnings with the new conforming preprocessor
+        - { os: windows, sdk_flag: "-D CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION=10.0.19041.0" }{type shared}
         - { type: shared, shared: YES }
         - { type: static, shared: NO }{end}
 
@@ -66,7 +69,7 @@ jobs:
       run: sudo apt-get install clang-tidy -y -q
 
     - name: Configure
-      run: cmake --preset=ci-${{ matrix.os }}{type shared}
+      run: cmake --preset=ci-${{ matrix.os }} ${{ matrix.sdk_flag }}{type shared}
         -D BUILD_SHARED_LIBS=${{ matrix.shared }}{end}
 
     - name: Build
