--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
         include:
         # CMake by default will pick 10.0.17763.0 up, but that has bugs in it
         # that make it emit warnings with the new conforming preprocessor
-        - { os: windows, sdk_flag: "-D CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION=10.0.19041.0" }{type shared}
+        - { os: windows, sdk_flag: "-D CMAKE_SYSTEM_VERSION=10.0.18362" }{type shared}
         - { type: shared, shared: YES }
         - { type: static, shared: NO }{end}
 
