Remove /Zc:preprocessor from Windows preset
While this flag would be very nice to have to weed out MSVC extensions
from the preprocessro and have standards conforming code, it requires a
certain Windows SDK version, which is not the default on GitHub Actions
windows image and likely would be bothersome to set up locally on the
developer's machine as well.

To make things simpler, we rely on the *nix CI runs to verify the
standards conformance of the code.

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -50,12 +50,9 @@ jobs:
       matrix:
         os: [macos, ubuntu, windows]{type shared}
 
-        type: [shared, static]{end}
+        type: [shared, static]
 
         include:
-        # CMake by default will pick 10.0.17763.0 up, but that has bugs in it
-        # that make it emit warnings with the new conforming preprocessor
-        - { os: windows, sdk_flag: "-D CMAKE_SYSTEM_VERSION=10.0.18362" }{type shared}
         - { type: shared, shared: YES }
         - { type: static, shared: NO }{end}
 
@@ -69,7 +66,7 @@ jobs:
       run: sudo apt-get install clang-tidy -y -q
 
     - name: Configure
-      run: cmake --preset=ci-${{ matrix.os }} ${{ matrix.sdk_flag }}{type shared}
+      run: cmake --preset=ci-${{ matrix.os }}{type shared}
         -D BUILD_SHARED_LIBS=${{ matrix.shared }}{end}
 
     - name: Build
