Add cppcheck integration

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -61,9 +61,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Install clang-tidy
+    - name: Install static analyzers
       if: matrix.os == 'ubuntu'
-      run: sudo apt-get install clang-tidy -y -q
+      run: sudo apt-get install clang-tidy cppcheck -y -q
 
     - name: Configure
       run: cmake --preset=ci-${{ matrix.os }}{type shared}
