--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,9 +41,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Install clang-tidy
+    - name: Install static analyzers
       if: matrix.os == 'ubuntu'
-      run: sudo apt-get install clang-tidy -y -q
+      run: sudo apt-get install clang-tidy cppcheck -y -q
 
     - uses: actions/setup-python@v2
       with: { python-version: "3.8" }
