Use a suppression annotation for C4251
Instead of disabling the warning altogether, it's better to suppress on
a case-by-case basis, because there could be places where the warning is
warranted, but in the example code the only place where the warning is
emitted is for a private data member, which is a valid candidate for
suppressing this warning.

--- a/cmake-init/templates/shared/CMakeLists.txt
+++ b/cmake-init/templates/shared/CMakeLists.txt
@@ -26,6 +26,7 @@ generate_export_header(
     %(name)s_%(name)s
     BASE_NAME %(name)s
     EXPORT_FILE_NAME include/%(name)s/%(name)s_export.h
+    CUSTOM_CONTENT_FROM_VARIABLE pragma_suppress_c4251
 )
 
 if(NOT BUILD_SHARED_LIBS)
