Add initial documentation support
Using Doxygen, Python and m.css, the generated project now has a `docs`
target in dev mode, which will build a nice looking documentation
webpage.

--- a/cmake-init/templates/executable/CMakeLists.txt
+++ b/cmake-init/templates/executable/CMakeLists.txt
@@ -69,3 +69,8 @@ add_custom_target(
     COMMAND "$<TARGET_FILE:%(name)s_%(name)s>"
     VERBATIM
 )
+
+option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" ON)
+if(BUILD_DOCUMENTATION)
+  include(cmake/docs.cmake)
+endif()
