--- a/cmake-init/templates/executable/CMakeLists.txt
+++ b/cmake-init/templates/executable/CMakeLists.txt
@@ -70,7 +70,7 @@ add_custom_target(
     VERBATIM
 )
 
-option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" ON)
+option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" OFF)
 if(BUILD_DOCUMENTATION)
   include(cmake/docs.cmake)
 endif()
