--- a/cmake-init/templates/header/CMakeLists.txt
+++ b/cmake-init/templates/header/CMakeLists.txt
@@ -34,7 +34,16 @@ target_compile_features(%(name)s_%(name)s INTERFACE cxx_std_%(std)s)
 
 # ---- Install rules ----
 
-include(cmake/install-rules.cmake)
+include(cmake/install-rules.cmake){if examples}
+
+# ---- Examples ----
+
+if(PROJECT_IS_TOP_LEVEL)
+  option(BUILD_EXAMPLES "Build examples tree." "${%(name)s_DEVELOPER_MODE}")
+  if(BUILD_EXAMPLES)
+    add_subdirectory(example)
+  endif()
+endif(){end}
 
 # ---- Developer mode ----
 
@@ -50,12 +59,7 @@ endif()
 include(CTest)
 if(BUILD_TESTING)
   add_subdirectory(test)
-endif(){if examples}
-
-option(BUILD_EXAMPLES "Build examples tree." ON)
-if(BUILD_EXAMPLES)
-  add_subdirectory(example)
-endif(){end}
+endif()
 
 option(BUILD_DOCUMENTATION "Build documentation using Doxygen and m.css" OFF)
 if(BUILD_DOCUMENTATION)
