--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        name: [address, undefined, memory]
+        name: [address, undefined]
 
         include:
         - name: address
@@ -66,9 +66,6 @@ jobs:
 
         - name: undefined
           options: '{ "UBSAN_OPTIONS": "print_stacktrace=1" }'
-
-        - name: memory
-          flags: -fsanitize-memory-track-origins=2
 
     runs-on: ubuntu-latest
 
