--- a/cmake-init/templates/shared/CMakeLists.txt
+++ b/cmake-init/templates/shared/CMakeLists.txt
@@ -44,8 +44,7 @@ set_target_properties(
 )
 
 target_include_directories(
-    %(name)s_%(name)s
-    ${%(name)s_warning_guard}
+    %(name)s_%(name)s ${%(name)s_warning_guard}
     PUBLIC
     "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
     "$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}/include>"
