--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
 
     - name: Configure
       env: { CXX: clang++-11 }
-      run: cmake --preset=ci-sanitizer
+      run: cmake --preset=ci-sanitize
 
     - name: Build
       run: cmake --build build -j 2
