Install m.css dependencies in docs CI job

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -130,6 +130,9 @@ jobs:
     - uses: actions/setup-python@v2
       with: { python-version: "3.8" }
 
+    - name: Install m.css dependencies
+      run: pip3 install jinja2 Pygments
+
     - name: Install Doxygen
       run: sudo apt-get update -q
         && sudo apt-get install doxygen -q -y
