--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -14,11 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     # To enable coverage, go to https://codecov.io/, acquire a token, put it
-    # into your secrets (Settings > Secrets > New repository secret) and delete
-    # the "if" conditional below.
+    # into your secrets (Settings > Secrets > New repository secret), delete
+    # the last line from the conditional below and edit the "<name>"
+    # placeholder to your GitHub name.
     # If you do not wish to use codecov, then simply delete this job from the
     # workflow.
-    if: "false"
+    if: github.repository_owner == '<name>'
+      && false
 
     steps:
     - uses: actions/checkout@v1
