Add clang-format support
Introduce the lint.cmake script, which is used both by CMake build
targets to lint and fix the code in developer mode and by the CI to
check the source code format before any other CI job.

The `format-check` and `format-fix` targets can be used to check and
fix the source code respectively using clang-format.

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -10,7 +10,18 @@ on:
     - master
 
 jobs:
+  lint:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Lint
+      run: cmake -D FORMAT_COMMAND=clang-format-11 -P cmake/lint.cmake
+
   coverage:
+    needs: [lint]
+
     runs-on: ubuntu-latest
 
     # To enable coverage, go to https://codecov.io/, acquire a token, put it
@@ -48,6 +59,8 @@ jobs:
         file: build/coverage/coverage.info
 
   sanitize:
+    needs: [lint]
+
     runs-on: ubuntu-latest
 
     steps:
@@ -72,6 +85,8 @@ jobs:
       run: ctest --output-on-failure -j 2
 
   test:
+    needs: [lint]
+
     strategy:
       matrix:
         os: [macos, ubuntu, windows]{type shared}
