--- a/cmake-init/templates/shared/CMakeLists.txt
+++ b/cmake-init/templates/shared/CMakeLists.txt
@@ -90,3 +90,5 @@ option(ENABLE_COVERAGE "Enable coverage support separate from CTest's" OFF)
 if(ENABLE_COVERAGE)
   include(cmake/coverage.cmake)
 endif()
+
+include(cmake/lint-targets.cmake)
