Disable release job in forks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,6 +69,7 @@ jobs:
     name: Package a release
 
     if: github.ref == 'refs/heads/master'
+      && github.repository_owner == 'friendlyanon'
 
     needs: test
 
